@@ -1,3 +1,8 @@
+2005-01-04  lav
+
+	* chset.cc, screen.cc: better check for wc printability; don't use
+	  mvaddchnstr in cursesw - it's broken.
+
 2004-12-30  lav
 
 	* getch.cc: workaround KEY_F definition from linux/keyboard.h
